<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>scholarshare</groupId>
	<artifactId>price</artifactId>
	<version>1.3.0</version>
	<packaging>jar</packaging>

	<name>scholarshare.price</name>
	<description>Downloads Scholarshare Share Price History</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.5</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<docker.image.prefix>registry.hub.docker.com/mckelvym</docker.image.prefix>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>jsr250-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.annotation</artifactId>
			<version>2.2.700</version>
		</dependency>
		<!-- https://github.com/remkop/picocli/blob/main/picocli-spring-boot-starter/README.md -->
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli-spring-boot-starter</artifactId>
			<version>4.7.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit -->
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin> <!-- https://docs.openrewrite.org/reference/latest-versions-of-every-openrewrite-module -->
			  <groupId>org.openrewrite.maven</groupId>
			  <artifactId>rewrite-maven-plugin</artifactId>
			  <version>4.42.0</version>
			  <configuration>
			    <activeRecipes>
					<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_0</recipe>
					<recipe>org.openrewrite.java.migrate.guava.NoGuava</recipe>
					<recipe>org.openrewrite.java.migrate.UpgradeToJava17</recipe>
					<recipe>org.openrewrite.java.migrate.JavaVersion17</recipe>
					<recipe>org.openrewrite.java.migrate.lombok.UpdateLombokToJava17</recipe>
					<recipe>org.openrewrite.java.logging.log4j.ParameterizedLogging</recipe>
					<recipe>org.openrewrite.java.migrate.lang.StringFormatted</recipe>
					<recipe>org.openrewrite.java.cleanup.FixStringFormatExpressions</recipe>
			    </activeRecipes>
			  </configuration>			 
			  <dependencies>
		          <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-spring</artifactId>
		            <version>4.34.0</version>
		          </dependency>
		          <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-migrate-java</artifactId>
		            <version>1.18.0</version>
		          </dependency>
		          <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-logging-frameworks</artifactId>
		            <version>1.19.0</version>
		          </dependency>
		          <dependency>
		            <groupId>org.openrewrite.recipe</groupId>
		            <artifactId>rewrite-java-security</artifactId>
		            <version>1.23.0</version>
		          </dependency>
		      </dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<from>
						<!--<image>gcr.io/distroless/java</image>-->
						<image>gcr.io/distroless/java17-debian11</image>
					</from>
					<to>
						<image>${docker.image.prefix}/${project.groupId}.${project.artifactId}</image>
						<tags>
							<tag>${project.version}</tag>
						</tags>
					</to>
					<container>
						<environment>
							<TZ>America/New_York</TZ>
						</environment>
					</container>
				</configuration>
				<executions>
					<execution>
						<id>docker-build</id>
						<phase>install</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
			</plugin>			
		</plugins>
	</build>


</project>
